option('build-gnome-twitch-executable', type : 'boolean', value : true, description : 'Build GNOME Twitch executable')
option('build-gnome-twitch-library', type : 'boolean', value : true, description : 'Build GNOME Twitch library')
option('build-player-backend-mpv-opengl', type : 'boolean', value : false, description : 'Build MPV OpenGL player backend')
option('build-player-backend-gstreamer-clutter', type : 'boolean', value : false, description : 'Build GStreamer player backend')
option('build-player-backend-gstreamer-cairo', type : 'boolean', value : false, description : 'Build GStreamer cairo player backend')
option('build-player-backend-gstreamer-opengl', type : 'boolean', value : false, description : 'Build GStreamer OpenGL playerbackend')
option('use-deprecated-webkit', type : 'boolean', value : false, descritpion : 'Use deprecated WebKit1 API')
