schemasdir = $(datadir)/glib-2.0/schemas
dist_schemas_DATA = gnome-twitch.gschema.xml

iconsdir = $(datadir)/icons/hicolor
icon16dir = $(iconsdir)/16x16/apps
icon22dir = $(iconsdir)/22x22/apps
icon24dir = $(iconsdir)/24x24/apps
icon32dir = $(iconsdir)/32x32/apps
icon48dir = $(iconsdir)/48x48/apps
icon256dir = $(iconsdir)/256x256/apps
icon512dir = $(iconsdir)/512x512/apps
iconscalabledir = $(iconsdir)/scalable/apps
dist_icon16_DATA = icons/hicolor/16x16/apps/gnome-twitch.png
dist_icon22_DATA = icons/hicolor/22x22/apps/gnome-twitch.png
dist_icon24_DATA = icons/hicolor/24x24/apps/gnome-twitch.png
dist_icon32_DATA = icons/hicolor/32x32/apps/gnome-twitch.png
dist_icon48_DATA = icons/hicolor/48x48/apps/gnome-twitch.png
dist_icon256_DATA = icons/hicolor/256x256/apps/gnome-twitch.png
dist_icon512_DATA = icons/hicolor/512x512/apps/gnome-twitch.png
dist_iconscalable_DATA = icons/hicolor/scalable/apps/gnome-twitch.svg

applicationsdir = $(datadir)/applications
dist_applications_DATA = com.gnome-twitch.app.desktop
